--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="app_explain">당신을 위한 \n똑똑한 식단관리 어플</string>
     <string name="plus">식사 입력</string>
     <string name="show">식사 보기</string>
+    <string name="food_name">식사명</string>
+    <string name="food_cnt">수량</string>
+    <string name="morning">아침</string>
+    <string name="lunch">점심</string>
+    <string name="dinner">저녁</string>
+    <string name="snack">간식</string>
+    <string name="input">입력</string>
 </resources>
